[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/pre_battle_menu/UnitItemContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/pre_battle_menu/ChangeUnitMenu.gd" type="Script" id=3]
[ext_resource path="res://ui/AudioButton.tscn" type="PackedScene" id=4]

[node name="ChangeUnitMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
unit_item_container_packed_scene = ExtResource( 1 )
view_unit_menu_scene = "res://ui/ViewUnitMenu.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.207843, 0.0313726, 0.164706, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 670.0
margin_bottom = 910.0
custom_constants/separation = 16

[node name="RemoveButton" parent="MarginContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_left = 190.0
margin_right = 430.0
margin_bottom = 73.0
text = "REMOVE"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 620.0
margin_bottom = 771.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 620.0
margin_bottom = 682.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 604.0
margin_bottom = 666.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="UnitItemContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_right = 588.0
margin_bottom = 101.0

[node name="ReturnButton" parent="MarginContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_left = 190.0
margin_top = 787.0
margin_right = 430.0
margin_bottom = 860.0
text = "RETURN"

[connection signal="pressed" from="MarginContainer/VBoxContainer/RemoveButton" to="." method="_on_RemoveButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
